created 2 urls and inline color style

--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <style>
+    body {color: red;
+    }
+  </style>
 </head>
 <body>
   <h1>Box-model</h1>
-  <p>hello world</p>
-  <p>hello css</p>
+  <p>first paragraph</p>
+  <p>second paragraph</p>
+  <a href="https://www.google.com">Google</a>
+  <a href="https://github.com/sunnyliuuw">my github repository</a>
 </body>
 </html>
