added images and styled border

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <style>
     body {color: red;
     }
+    img {
+      border: 2px dashed orange;
+      width: 25%;
+    }
   </style>
 </head>
 <body>
@@ -13,5 +17,7 @@
   <p>second paragraph</p>
   <a href="https://www.google.com">Google</a>
   <a href="https://github.com/sunnyliuuw">my github repository</a>
+  <img src="img/cherry-blossom.jpg" alt="A cherry blossom">
+  <img src="img/tree-top-giraffe.png" alt="A giraffe is on the tree top">
 </body>
 </html>
