created styles folder and link the styles.css to the index.html

--- a/index.html
+++ b/index.html
@@ -2,17 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <style>
-    * {
-      box-sizing: border-box;
-    }
-    body {color: red;
-    }
-    img {
-      border: 2px dashed orange;
-      width: 25%;
-    }
-  </style>
+  <link rel="stylesheet" type="text/css" href="styles/styles.css">
 </head>
 <body>
   <h1>Box-model</h1>
